--- a/src/main/webapp/css/estilos.css
+++ b/src/main/webapp/css/estilos.css
@@ -3,24 +3,25 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+  font-family: Segoe UI;
+  color: #000;
+}
+#teste {
+  background-color: #000;
 }
 
 /*
  O Layout da pagina foi feito usando grid onde
 
- MH = mainHeader
  AS = aside
  CT = content
 
 */
-.teste{
-	display: none;
-}
+
 #layout{
   display: grid;
-  grid-template-columns: 150px auto;
+  grid-template-columns: 200px auto;
   grid-template-rows: auto;
-  
   grid-template-areas:
   'AS CT';
 
@@ -31,12 +32,19 @@
   grid-area: AS;
 
   background-color: #E28F83;
-  color: #8b8b8b;
+  height: 630px;
+}
+
+#aside p {
+  font-family: Comic Sans MS;
+  font-size: 30px;
+  font-weight: bold;
+  color: #FFF;
 }
 
 #content{
   grid-area: CT;
   display: flex;
 
-  color: #FAF2DA;
+  background-color: #FAF2DA;
 }
